After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779498 - manager: handle session failing to start
manager: handle session failing to start
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-02 21:39 UTC by Ray Strode [halfline]
Modified: 2017-03-03 20:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
manager: handle session failing to start (5.41 KB, patch)
2017-03-02 21:39 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2017-03-02 21:39:23 UTC
This is a RHEL patch that should really be upstream!
Comment 1 Ray Strode [halfline] 2017-03-02 21:39:36 UTC
Created attachment 347101 [details] [review]
manager: handle session failing to start

Right now if a session fails really early in the start up
process, we fail to handle it.

This commit fixes that.
Comment 2 Ray Strode [halfline] 2017-03-03 20:29:31 UTC
Attachment 347101 [details] pushed as 5c9e120 - manager: handle session failing to start