manager: handle session failing to start

Right now if a session fails really early in the start up
process, we fail to handle it.

This commit fixes that.

https://bugzilla.gnome.org/show_bug.cgi?id=779498